src/grammar.txt
proc: ID
    | PLUS
    | MUL
    | MINUS
    | DIV

data: NUMBER
    | BOOLEAN
    | STRING
    | proc

term: data
    | expr
    | constant
    | proc

p-expr: LPAREN proc term* RPAREN

expr: data
    | p-expr
    | constant

constant: ID

constant_assignment: LPAREN DEFINE constant expr RPAREN

function_assignment: LPAREN DEFINE LPAREN constant* RPAREN expr RPAREN

assignment_statement: constant_assignment
                    | function_assignment

statement: assignment_statement
         | expr

program : statement
        | statement compound_statement
